--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ p {
   line-height: 37px;
   color: #FF6161;
 }
-.EnterPopUp .emailSend {
+.EnterPopUp .emailSend input {
   margin-top: 15px;
 }
 .subPopUp {
@@ -693,7 +693,7 @@ p {
   margin-top: 36px;
 }
 input {
-  text-align: center;
+  padding: 0 30px;
 }
 input:active, input:hover, input:focus {
   outline: 0;
@@ -710,7 +710,7 @@ input::placeholder{
   font-weight: 700;
   letter-spacing: 0.2px;
   color: #BABABA;
-  padding: 16px 42px;
+  padding: 16px 0;
 }
 .trafficLightHand {
   width: 600px;
