--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ p {
   
   background: rgba(0, 0, 0, 0.6);
 }
-.EnterPopUp {
+.enterPopUp {
   padding: 73px 61px;
   width: 640px;
   height: 456px;
@@ -59,14 +59,13 @@ p {
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
   border-radius: 25px;
 }
-.EnterPopUp h2 {
-  padding-bottom: 21px;
+.enterPopUp h2 {
   font-weight: 700;
   font-size: 33px;
   line-height: 37px;
   color: #FF6161;
 }
-.EnterPopUp .emailSend input {
+.enterPopUp .emailSend:nth-child(3) {
   margin-top: 15px;
 }
 .subPopUp {
@@ -92,7 +91,7 @@ p {
   background: var(--red-back);
   padding: 6px 48px;
 }
-.EnterPopUp a {
+.enterPopUp a {
   font-size: 16px;
   font-weight: 700;
   line-height: 18px;
@@ -102,11 +101,11 @@ p {
   cursor: pointer;
   position: relative;
 }
-.EnterPopUp a:active {
+.enterPopUp a:active {
   border: none;
   text-decoration: none;
 }
-.EnterPopUp a::after {
+.enterPopUp a::after {
   display: block;
     content: "";
     background: var(--red);
@@ -117,11 +116,11 @@ p {
     position: absolute;
     transition: width .3s ease-in-out;
 }
-.EnterPopUp a:hover::after,
-.EnterPopUp a:focus::after {
+.enterPopUp a:hover::after,
+.enterPopUp a:focus::after {
   width: 70%;
 }
-.EnterPopUp a.active::after {
+.enterPopUp a.active::after {
   display: block;
   content: "";
   background: var(--red);
